--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,79 +12,93 @@
         android:id="@+id/tv_makeAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="50dp"
+        android:gravity="center"
         android:text="@string/make_account"
         android:textColor="@color/white"
         android:textSize="35sp"
         android:textStyle="bold"
-        android:layout_margin="50dp"
-        android:gravity="center"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edt_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_makeAccount"
-        android:background="#30ffffff"
-        android:hint="@string/username"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
         android:layout_margin="10dp"
-        android:padding="20dp"
+        android:layout_marginTop="32dp"
+        android:background="#30ffffff"
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="20dp"
+        android:hint="@string/username"
+        android:importantForAutofill="no"
         android:inputType="text"
-        android:importantForAutofill="no" />
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_makeAccount"
+        tools:ignore="TextContrastCheck" />
 
     <EditText
         android:id="@+id/edt_fullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edt_username"
-        android:background="#30ffffff"
-        android:hint="@string/fullName"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
         android:layout_margin="10dp"
-        android:padding="20dp"
+        android:background="#30ffffff"
         android:drawableStart="@drawable/ic_account_box"
         android:drawablePadding="20dp"
+        android:hint="@string/fullName"
+        android:importantForAutofill="no"
         android:inputType="text"
-        android:importantForAutofill="no" />
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edt_username" />
 
     <EditText
         android:id="@+id/edt_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edt_fullName"
-        android:background="#30ffffff"
-        android:hint="@string/password"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
         android:layout_margin="10dp"
-        android:padding="20dp"
+        android:background="#30ffffff"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="20dp"
+        android:hint="@string/password"
+        android:importantForAutofill="no"
         android:inputType="textPassword"
-        android:importantForAutofill="no" />
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edt_fullName" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_signUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edt_password"
-        android:text="@string/sign_up"
-        android:backgroundTint="@color/design_default_color_secondary"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"/>
+        android:layout_margin="20dp"
+        android:backgroundTint="@color/design_default_color_secondary"
+        android:text="@string/sign_up"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
     <TextView
         android:id="@+id/tv_haveAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_signUp"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
         android:text="@string/have_account"
         android:textColor="@color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="5dp"/>
-
-</RelativeLayout>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signUp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
