--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="50dp"
         android:gravity="center"
-        android:text="@string/make_account"
+        android:text="@string/register"
         android:textColor="@color/white"
         android:textSize="35sp"
         android:textStyle="bold"
